[package]
name = "JohmaBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
songbird = "0.4.1"
